# leea-contracts

./: .gitignore  README.md  package-lock.json
.github/workflows/: client-rs.yml
contracts/: AgentRegistry.sol  Escrow.sol  GlobalParameters.sol  LeeaGovernance.sol  LeeaToken.sol  ValidatorStaking.sol  gen.sh  package-lock.json  package.json
contracts/artifacts/aregistry/: AgentRegistry.go
contracts/artifacts/escrow/: Escrow.abi  Escrow.go
contracts/artifacts/governance/: LeeaGovernance.abi  LeeaGovernance.go
contracts/artifacts/token/: LeeaToken.abi  LeeaToken.go
contracts/evm/: package-lock.json
contracts/solana/: .gitignore  Anchor.toml  Cargo.toml  Makefile  build.sh  wallet-keypair.json
contracts/solana/client/: client.ts  escrow.ts
contracts/solana/client-js/: createMint.ts  escrow.ts  mint.ts
contracts/solana/client-rs/escrow/: Cargo.toml
contracts/solana/client-rs/escrow/src/: main.rs
contracts/solana/client-rs/mint/: Cargo.toml
contracts/solana/client-rs/registry/: Cargo.toml
contracts/solana/programs/aico/: Cargo.toml
contracts/solana/programs/escrow/: Cargo.toml
contracts/solana/programs/leea-agent-registry/: Cargo.toml
contracts/solana/programs/leea-token/: Cargo.toml
contracts/solana/programs/leea-token/src/: lib.rs
contracts/solana/programs/registry/: Cargo.toml
contracts/solana/programs/registry/src/: lib.rs
contracts/solana/tests/: leea-agent-registry.ts  leea-aico-test.ts  register-agent-by-admin.ts  test-aico.ts  test-escrow.ts  test-registry.ts  utils.ts
test/: contracts_test.go
(+13 files in other folders)
